@@ -1,5 +1,12 @@
 2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>
 
+	* embed/mozilla/GtkNSSDialogs.cpp:
+
+	Default to Cancel on Cert dialogues, patch by Cosimo Cecchi. 
+	Fixes bug #163379.
+
+2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>
+
 	* embed/mozilla/EphyUtils.cpp:
 	* embed/mozilla/EphyHeaderSniffer.cpp:
 	* embed/mozilla/MozDownload.cpp:
